# rust-vllm-agent

./: Cargo.toml  GEMINI.md  Makefile  README.md  test.json
config/: vllm-ai-agent-config.json
docs/: example-response.json
scripts/: infrastructure.sh
src/: main.rs
src/cli/: schema.rs
src/config/: load.rs
src/error/: generic.rs
src/handlers/: common.rs  document.rs  mod.rs  process.rs
